--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,7 @@
 .incone1{
     margin: 16px;
 }
-.w3-halfi{width:50%;
-    padding-left:45px;
-    padding-right:25px;
+.w3-halfi{width: 23.33%;
     float:left;
-    padding: 8px;
-    background: blue;
-}
-.body2{
-    padding: 18px;
+    margin: 12px
 }
