--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.w3-image{max-width:100%;height:auto}
+
 .initheader{
     padding-left: 19px;
     height: 59px;
@@ -17,4 +17,17 @@
 .w3-halfi{width: 23.33%;
     float:left;
     margin: 3px
+}
+.image{
+    background-image: url(./Photo/deco.png);
+    text-align: center;
+    max-width:100%;
+    height: 700px;;
+    background-position: center;
+    background-size: cover;
+    padding: 38px;
+    
+}
+.textebody1{
+    padding: 14px;
 }
