--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,14 @@
     background-image: url(./Photo/deco.png);
     text-align: center;
     max-width:100%;
-    height: 700px;;
+    height: 400px;
     background-position: center;
     background-size: cover;
     padding: 38px;
     
 }
 .textebody1{
-    padding: 14px;
+    padding-top: 1rem;
+    font-size: 13rem;
+    color: white;
 }
