--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,4 @@
 .footer{
-    background: black;
     padding-top: 38px;
     padding-bottom: 38px;
 }
@@ -7,16 +6,16 @@
     text-align: center;
 }
 .foot2{
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 15px;
 }
 .foot1{
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 20px;
     text-align: center;
 }
 .grostore{
-    color:white;
+    color:rgb(0, 0, 0);
     font-size: 55px;
     padding-top: 55px;
     text-align: center;
