--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,6 @@
 }
 .textebody1{
     padding-top: 1rem;
-    font-size: 13rem;
-    color: white;
+    font-size: 8rem;
+    color: rgb(0, 0, 0);
 }
