--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,12 @@
     font-size: 8rem;
     color: rgb(0, 0, 0);
 }
+.bgs{
+    background-color: white;
+    border-radius: 8px;
+}
+.bgs:hover{
+    background-color: rgb(0, 0, 0);
+    border-radius: 8px;
+    color: white;
+}
